# Copyright (c) 2023 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/. */

import("//testing/test.gni")

source_set("futures") {
  sources = [
    "future.cc",
    "future.h",
    "future_join.h",
  ]

  deps = [ "//base" ]
}

source_set("future_tests") {
  testonly = true

  sources = [
    "future_join_unittest.cc",
    "future_unittest.cc",
  ]

  deps = [
    ":futures",
    "//base/test:test_support",
  ]
}
