# Copyright (c) 2023 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.

static_library("browser") {
  sources = [
    "leaked_credentials_api.cc",
    "leaked_credentials_api.h",
  ]

  deps = [
    "//base",
  ]
}

source_set("unit_tests") {
  testonly = true

  sources = [
    "leaked_credentials_api_unittest.cc",
  ]

  deps = [
    "//base",
    "//brave/components/leaked_credentials",
    "//testing/gtest",
  ]
}