import("//brave/build/config.gni")
import("//brave/components/binance/browser/buildflags/buildflags.gni")

assert(binance_enabled)

source_set("browser") {
  public_deps = [
      "buildflags"
  ]

  sources = [
    "binance_json_parser.cc",
    "binance_json_parser.h",
    "binance_service.cc",
    "binance_service.h",
  ]

  deps = [
    "//base",
    "//components/keyed_service/content",
    "//components/keyed_service/core",
    "//content/public/browser",
    "//services/network/public/cpp",
    "//url",
  ]
}
