import("//brave/build/config.gni")

static_library("browser") {
  sources = [
    "brave_news_controller.cc",
    "brave_news_controller.h",
    "urls.cc",
    "urls.h",
  ]

  deps = [
    "//base",
    "//brave/components/api_request_helper",
    "//brave/components/brave_today/common",
    "//brave/components/brave_today/common:mojo_bindings",
    "//brave/components/l10n/browser",
    "//brave/components/l10n/common",
  ]
}
