import("//brave/build/config.gni")
import("//brave/components/brave_today/common/buildflags/buildflags.gni")
import("//build/config/features.gni")

assert(brave_news_enabled)

static_library("browser") {

  sources = [
    "brave_news_controller.cc",
    "brave_news_controller.h",
    "feed_parsing.cc",
    "feed_parsing.h",
    "urls.cc",
    "urls.h",
  ]

  deps = [
    "//base",
    "//brave/components/api_request_helper",
    "//brave/components/brave_private_cdn",
    "//brave/components/brave_today/common",
    "//brave/components/brave_today/common:mojom",
    "//brave/components/l10n/browser",
    "//brave/components/l10n/common",
    "//components/keyed_service/core",
    "//components/prefs",
    "//third_party/abseil-cpp:absl",
    "//ui/base",
    "//url"
  ]
}
