import("//brave/components/brave_today/common/buildflags/buildflags.gni")
import("//brave/build/config.gni")
import("//mojo/public/tools/bindings/mojom.gni")

static_library("common") {
  public_deps = [ "buildflags" ]
  sources = [
    "switches.cc",
    "switches.h",
  ]

  deps = [
    "//base"
  ]
}

mojom("mojom") {
  generate_java = true
  sources = [ "brave_news.mojom" ]

  deps = [
    "//mojo/public/mojom/base",
    "//url/mojom:url_mojom_gurl",
  ]
}
