import("//brave/build/config.gni")

source_set("browser") {
  sources = [
    "ntp_widget_utils_oauth.cc",
    "ntp_widget_utils_oauth.h",
    "ntp_widget_utils_region.cc",
    "ntp_widget_utils_region.h",
    "ntp_widget_utils_network.cc",
    "ntp_widget_utils_network.h",
  ]

  deps = [
    "//base",
    "//components/country_codes",
    "//components/prefs",
    "//crypto",
    "//net",
    "//services/network/public/cpp",
    "//url",
  ]
}
