# Copyright (c) 2020 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.

import("//tools/grit/repack.gni")

import("//build/config/locales.gni")
import("//brave/resources/brave_grit.gni")

group("resources") {
  public_deps = [ ":repack_unscaled_resources" ]
}

repack("repack_unscaled_resources") {
  visibility = [ ":resources" ]
  output = "$target_gen_dir/brave_resources.pak"
  sources = [ "$root_gen_dir/components/brave_components_resources.pak" ]
  deps = [ "//brave/components/resources" ]
  copy_data_to_bundle = true
}


brave_grit("brave_ios_components_resources") {
  source = "brave_ios_components_resources.grd"

  output_name = "brave_ios_components_resources_new"

  outputs = [
    "grit/brave_ios_components_resources.h",
"grit/brave_ios_components_resource_map.h",
    "brave_ios_components_resources.pak",
  ]

  deps = [
    "//brave/ios/browser/api/ui/webui/components/resources",
  ]

  output_dir = "$root_gen_dir/components"
}